logs/Slang/generated/keywords/5.6.2--keyword_property.sv.log
name: keyword_property
description: The 'property' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv:8:8: error: expected declarator
    bit property;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv:8:9: error: language feature not yet supported
    bit property;
        ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv:8:17: error: expected identifier
    bit property;
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv:8:18: error: expected 'endproperty'
    bit property;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_property.sv:9:1: error: expected expression
endmodule
^
